force-app/main/default/objects/vlocity_ins__BillingAccount__c/fields/vlocity_ins__AutomaticPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AutomaticPaymentAmount__c</fullName>
    <label>Automatic Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>