force-app/main/default/objects/vlocity_ins__BillingAccount__c/fields/vlocity_ins__BillDeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__BillDeliveryMethod__c</fullName>
    <label>Bill Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>