force-app/main/default/objects/vlocity_ins__BillingAccount__c/fields/vlocity_ins__BillingContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__BillingContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Contacts</relationshipLabel>
    <relationshipName>Billing_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>