force-app/main/default/objects/vlocity_ins__BillingAccount__c/fields/vlocity_ins__BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__BillingFrequency__c</fullName>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>