force-app/main/default/objects/vlocity_ins__BillingAccount__c/fields/vlocity_ins__BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__BillingStreet__c</fullName>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>