force-app/main/default/objects/vlocity_ins__BillingAccount__c/fields/vlocity_ins__IsAutomaticPaymentEnabled__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsAutomaticPaymentEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Automatic Payment</label>
    <type>Checkbox</type>
</CustomField>