force-app/main/default/objects/vlocity_ins__BillingAccount__c/fields/vlocity_ins__PaymentMethodId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PaymentMethodId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Method</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vlocity_ins__PaymentMethod__c.vlocity_ins__AccountId__c</field>
            <operation>equals</operation>
            <valueField>$Source.vlocity_ins__AccountId__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_ins__PaymentMethod__c</referenceTo>
    <relationshipLabel>Billing Accounts</relationshipLabel>
    <relationshipName>Billing_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>